--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <header class="cabeçalho">
             <span class="cabeçalho__menu-hamburguer"></span>
             <img src="./Logo.svg" alt="Logo da AluraBooks">
+            <a href="#"><img src="./Favoritos.svg" alt="Meus favoritos"></a>
+            <a href="#"><img src="./Usuario.png"> alt="Carrinho de compras"</a>
+            <a href="#"><img src="./Sacola.png">  alt="Meu perfil"></a>
+            <link rel="stylesheet" href="header.css">
         </header>
     </body>
 </html>
